--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "ironman_client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://melee-ironman.herokuapp.com/",
+  "homepage": "https://victormrecabarren.github.io/melee-ironman",
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "gh-pages": "^2.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
