--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://victormrecabarren.github.io/melee-ironman",
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "gh-pages": "^2.1.0",
+    "gh-pages": "2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
